k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivebox-deployment
  labels:
    app: hivebox
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hivebox
  template:
    metadata:
      labels:
        app: hivebox
    spec:
      containers:
      - name: hivebox
        image: hivebox:0.0.1
        ports:
        - containerPort: 5000
