k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hivebox-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /version
        pathType: Prefix
        backend:
          service:
            name: hivebox-service
            port:
              number: 80
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: hivebox-service
            port:
              number: 80
      - path: /temperature
        pathType: Prefix
        backend:
          service:
            name: hivebox-service
            port:
              number: 80
